--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -184,7 +184,7 @@
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{nothing}\<%
 \\
