--- a/paper/code/progress.tex
+++ b/paper/code/progress.tex
@@ -90,14 +90,14 @@
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Progress}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
@@ -121,28 +121,28 @@
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 \AgdaBound{iso}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{N⇄N'}\AgdaSpace{}%
+\AgdaBound{t⇄t'}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
-\AgdaBound{N⇄N'}\AgdaSymbol{)}\<%
+\AgdaBound{t⇄t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{N↪N'}\AgdaSpace{}%
+\AgdaBound{t↪t'}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
-\AgdaBound{N↪N'}\AgdaSymbol{)}\<%
+\AgdaBound{t↪t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
@@ -152,9 +152,9 @@
 \>[28]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -169,9 +169,9 @@
 \>[28]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -187,12 +187,12 @@
 \>[28]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NM₁}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM₂}\AgdaSpace{}%
+\AgdaBound{⇑t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}%
 \>[63]\AgdaSymbol{=}\AgdaSpace{}%
@@ -207,9 +207,9 @@
 \>[28]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{N-⟨}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑r}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{,}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NM}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑s}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{⟩}}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -225,12 +225,12 @@
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN₁}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NN₂}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}%
 \>[63]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -245,9 +245,9 @@
 \>[28]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{N-⟨}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑r}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{,}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NM}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑s}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{⟩}}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -281,7 +281,7 @@
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{N-⟨}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{N-ƛ}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{,}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NM}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑s}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{⟩}}}%
 \>[47]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -295,7 +295,7 @@
 \AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{N-⟨}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑r}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{,}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{N-ƛ}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{⟩}}}%
@@ -311,9 +311,9 @@
 \AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{N-⟨}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑r}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{,}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NM}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑s}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{⟩}}}%
 \>[47]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -326,9 +326,9 @@
 \AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSymbol{))}%
 \>[42]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
@@ -343,7 +343,7 @@
 \AgdaCatchallClause{\AgdaInductiveConstructor{dist}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{ƛ}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaCatchallClause{\AgdaSymbol{))}}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}\AgdaCatchallClause{\AgdaSymbol{))}}%
 \>[42]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{N-ƛ}}\AgdaSpace{}%
@@ -402,9 +402,9 @@
 \>[29]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}%
 \>[51]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -417,7 +417,7 @@
 \AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{})}}%
 \>[29]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}%
 \>[51]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaInductiveConstructor{id-⇒}\<%
@@ -427,10 +427,10 @@
 \AgdaCatchallClause{\AgdaInductiveConstructor{sym}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{id-×}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 \>[29]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}%
 \>[51]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sym-id-×}\AgdaSymbol{)}\<%
@@ -440,10 +440,10 @@
 \AgdaCatchallClause{\AgdaInductiveConstructor{sym}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{id-⇒}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 \>[29]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}%
 \>[51]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaInductiveConstructor{sym-id-⇒}\<%
@@ -454,10 +454,10 @@
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{[}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{abs}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 \>[27]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaInductiveConstructor{abs}\<%
@@ -467,10 +467,10 @@
 \AgdaCatchallClause{\AgdaInductiveConstructor{sym}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{abs}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 \>[27]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sym-abs}\AgdaSymbol{)}\<%
@@ -512,9 +512,9 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -529,9 +529,9 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -575,9 +575,9 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -593,9 +593,9 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
@@ -609,10 +609,10 @@
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{sym}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{iso}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇑t}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaInductiveConstructor{sym-sym}\<%
@@ -621,51 +621,51 @@
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{[}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{iso}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{]≡}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{N}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{done}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{NN}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{⇓t}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 \AgdaBound{iso}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSymbol{)}\<%
+\AgdaBound{⇓t}\AgdaSymbol{)}\<%
 \end{code}
 %</progress-iso>
 %<*progress-lam>
 \begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{N⇄N'}%
+\AgdaBound{t⇄t'}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-\AgdaBound{N⇄N'}\AgdaSymbol{)}\<%
+\AgdaBound{t⇄t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{N↪N'}%
+\AgdaBound{t↪t'}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-\AgdaBound{N↪N'}\AgdaSymbol{)}\<%
+\AgdaBound{t↪t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{NN}%
+\AgdaBound{⇑t}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaInductiveConstructor{N-ƛ}\<%
@@ -674,106 +674,106 @@
 %<*progress-app>
 \begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{r}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{L⇄L'}%
+\AgdaBound{r⇄r'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-\AgdaBound{L⇄L'}\AgdaSymbol{)}\<%
+\AgdaBound{r⇄r'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{L↪L'}%
+\AgdaBound{r↪r'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-\AgdaBound{L↪L'}\AgdaSymbol{)}\<%
+\AgdaBound{r↪r'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
-\AgdaBound{NeuL}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{⇓r}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{s}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \AgdaIndent{0}\AgdaIndent{0}\>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{M⇄M'}%
+\AgdaBound{s⇄s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-\AgdaBound{M⇄M'}\AgdaSymbol{)}\<%
+\AgdaBound{s⇄s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{M↪M'}%
+\AgdaBound{s↪s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-\AgdaBound{M↪M'}\AgdaSymbol{)}\<%
+\AgdaBound{s↪s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{NM}%
+\AgdaBound{⇑s}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{NeuL}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{⇓r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSymbol{))}\<%
+\AgdaBound{⇑s}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{})}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaInductiveConstructor{N-ƛ}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{s}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{M⇄M'}%
+\AgdaBound{s⇄s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-\AgdaBound{M⇄M'}\AgdaSymbol{)}\<%
+\AgdaBound{s⇄s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{M↪M'}%
+\AgdaBound{s↪s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-\AgdaBound{M↪M'}\AgdaSymbol{)}\<%
+\AgdaBound{s↪s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{NM}%
+\AgdaBound{⇑s}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaInductiveConstructor{β-ƛ}\<%
@@ -783,69 +783,69 @@
 \begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{r}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{M⇄M'}\AgdaSpace{}%
+\AgdaBound{r⇄r'}\AgdaSpace{}%
 \>[6]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
-\AgdaBound{M⇄M'}\AgdaSymbol{)}\<%
+\AgdaBound{r⇄r'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{M↪M'}\AgdaSpace{}%
+\AgdaBound{r↪r'}\AgdaSpace{}%
 \>[6]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
-\AgdaBound{M↪M'}\AgdaSymbol{)}\<%
+\AgdaBound{r↪r'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{s}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \AgdaIndent{0}\AgdaIndent{0}
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{N⇄N'}%
+\AgdaBound{s⇄s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
-\AgdaBound{N⇄N'}\AgdaSymbol{)}\<%
+\AgdaBound{s⇄s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{N↪N'}%
+\AgdaBound{s↪s'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
-\AgdaBound{N↪N'}\AgdaSymbol{)}\<%
+\AgdaBound{s↪s'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{NN}%
+\AgdaBound{⇑s}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 \end{code}
 %</progress-prod>
@@ -855,52 +855,52 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{π}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaBound{N⇄N'}%
+\AgdaBound{t⇄t'}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
-\AgdaBound{N⇄N'}\AgdaSymbol{)}\<%
+\AgdaBound{t⇄t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaBound{N↪N'}%
+\AgdaBound{t↪t'}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
-\AgdaBound{N↪N'}\AgdaSymbol{)}\<%
+\AgdaBound{t↪t'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
+\AgdaBound{⇓t}\AgdaSymbol{)}%
 \>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
 \AgdaInductiveConstructor{π}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
+\AgdaBound{⇓t}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{π}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
@@ -911,13 +911,13 @@
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{N-⟨}}\AgdaSpace{}%
-\AgdaBound{NN}\AgdaSpace{}%
+\AgdaBound{⇑r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{NM}\AgdaSpace{}%
+\AgdaBound{⇑s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
