--- a/paper/references.bib
+++ b/paper/references.bib
@@ -96,21 +96,54 @@
 	year={1991},
 	pages={125–154}
 }
-@incollection{ITT,
-	title = {Constructive Mathematics and Computer Programming},
-	editor = {L. Jonathan Cohen and Jerzy Łoś and Helmut Pfeiffer and Klaus-Peter Podewski},
-	series = {Studies in Logic and the Foundations of Mathematics},
-	publisher = {Elsevier},
-	volume = {104},
-	pages = {153-175},
-	year = {1982},
-	booktitle = {Logic, Methodology and Philosophy of Science VI},
-	issn = {0049-237X},
-	doi = {https://doi.org/10.1016/S0049-237X(09)70189-2},
-	url = {https://www.sciencedirect.com/science/article/pii/S0049237X09701892},
-	author = {Per Martin-Löf}
+@incollection{MLTT72,
+	Author           = {Martin-L{\"o}f, Per},
+	Booktitle        = {Twenty-five years of constructive type theory ({V}enice, 1995)},
+	Mrclass          = {03B15 (03F55)},
+	Mrnumber         = 1686864,
+	Pages            = {127--172},
+	Publisher        = {Oxford University Press},
+	Editor           = {Giovanni Sambin and Jan M. Smith},
+	Series           = {Oxford Logic Guides},
+	Title            = {An intuitionistic theory of types},
+	Volume           = 36,
+	Year             = 1998
 }
-
+@incollection{MLTT73,
+	Author           = {Martin-L{\"o}f, Per},
+	Booktitle        = {Logic Colloquium '73, Proceedings of the Logic Colloquium},
+	Editor           = {H.E. Rose and J.C. Shepherdson},
+	Pages            = {73--118},
+	Publisher        = {North-Holland},
+	Series           = {Studies in Logic and the Foundations of Mathematics},
+	Title            = {An intuitionistic theory of types: predicative part},
+	Volume           = 80,
+	Year             = 1975
+}
+@incollection{MLTT79,
+	Author           = {Martin-L{\"o}f, Per},
+	Booktitle        = {Logic, Methodology and Philosophy of Science VI, Proceedings of the Sixth International Congress of Logic, Methodology and Philosophy of Science, Hannover 1979},
+	Editor           = {L. Jonathan Cohen and Jerzy {Łoś} and Helmut Pfeiffer and Klaus-Peter Podewski},
+	Doi              = {10.1016/S0049-237X(09)70189-2},
+	Pages            = {153--175},
+	Publisher        = {North-Holland},
+	Series           = {Studies in Logic and the Foundations of Mathematics},
+	Title            = {Constructive mathematics and computer programming},
+	Url              = {http://dx.doi.org/10.1016/S0049-237X(09)70189-2},
+	Volume           = 104,
+	Year             = 1982
+}
+@book{Bibliopolis,
+	Author           = {Martin-L{\"o}f, Per},
+	Isbn             = {88-7088-105-9},
+	Pages            = {iv+91},
+	Publisher        = {Bibliopolis},
+	Series           = {Studies in Proof Theory},
+	Subtitle         = {Notes by Giovanni Sambin},
+	Title            = {Intuitionistic type theory},
+	Volume           = 1,
+	Year             = 1984
+}
 @article{debrujin_index,
 	title = {Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
 	volume = {75},
