--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -8,7 +8,7 @@ Trabajar con tipos isomorfos provee mayor flexibilidad en la construcción de pr
 Este trabajo se centra principalmente en el primero de estos sistemas, llamado Sistema~I.
 Aquí, se presenta una formalización de una adaptación de dicho sistema en el lenguaje Agda, además, se añade el tipo Top y los isomorfismos correspondientes para ampliar aún más la flexibilidad del sistema.
 Esta formalización va acompañada de pruebas formales que demuestran el cumplimiento de diversas propiedades, siendo la normalización fuerte una de las más cruciales.
-Es importante destacar que la prueba de normalización fuerte emplea una técnica distinta a la de candidatos de reducibilidad clásica, lo que contribuye a la originalidad y profundidad del trabajo.
+Es importante destacar que la prueba de normalización fuerte utiliza la técnica de logical relations pero con predicados distintos a los presentados en la prueba de candidatos de reducibilidad de Girard.
 
 En esta tesina no solo se exploran los sistemas módulo isomorfismos sino también, los intricados mecanismos que sirven de motor para muchas implementaciones de cálculo lambda, como lo son las substituciones explícitas, que desempeñan un papel fundamental en la manipulación de términos dentro del sistema.
 Además, se exponen los fundamentos de la correspondencia de Curry-Howard, esta explica la estrecha relación entre la programación y la lógica y permiten comprender la doble mirada que propone Sistema I, por un lado, puede ser visto como un lenguaje de programación y por el otro como un sistema de pruebas.
