Add minor fixes

--- a/paper/code/subs.tex
+++ b/paper/code/subs.tex
@@ -235,7 +235,7 @@
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
 	\AgdaBound{L}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{=}%
+	\>[24]\AgdaSymbol{=}%
 	\>[27]\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
