--- a/paper/code/term.tex
+++ b/paper/code/term.tex
@@ -88,7 +88,7 @@
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\>[3]\AgdaComment{--\ (→ᵢ)}\<%
+\>[3]\AgdaComment{--\ (⇒ᵢ)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}%
@@ -118,7 +118,7 @@
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{\}}%
-\>[3]\AgdaComment{--\ (→ₑ)}\<%
+\>[3]\AgdaComment{--\ (⇒ₑ)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
